[package]
name = "rui"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = { git = "https://github.com/linebender/druid", rev = "f74a712" }
#druid = { git = "https://github.com/linebender/druid", rev = "f74a712" }
tracing = "0.1"
tracing-subscriber = "0.2"
