[package]
name = "rui"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = { git = "https://github.com/linebender/druid", rev = "0079ae3", features = [
    "serde",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1.8.0"
xi-unicode = "0.3.0"
bumpalo = { version = "3.9", features = ["boxed"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1.9.0"
notify = "4"
nom = "7"
anymap2 = "0.13"
