[workspace]
members = [
    "crates/esplori",
    "crates/rui",
    "crates/style",
    "crates/memoize_attr",
    "crates/esplori",
    "crates/zest",
]

[patch.crates-io]
piet-common = { git = "https://github.com/linebender/piet", rev = "436c5d9" }
piet-coregraphics = { git = "https://github.com/linebender/piet", rev = "436c5d9" }
