[workspace]
members = [
    "crates/esplori",
    "crates/rui",
    "crates/style",
    "crates/memoize_attr",
    "crates/esplori",
    "crates/zest",
    "crates/zest-app",
]

[patch.crates-io]
piet-common = { path = "../third_party/piet/piet-common" }
cocoa = { path = "../third_party/core-foundation-rs/cocoa" }
core-graphics = { path = "../third_party/core-foundation-rs/core-graphics" }
core-foundation = { path = "../third_party/core-foundation-rs/core-foundation" }
core-foundation-sys = { path = "../third_party/core-foundation-rs/core-foundation-sys" }
