[package]
name = "esplori"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = { git = "https://github.com/linebender/druid", rev = "f63ab10" }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1.8.0"
xi-unicode = "0.3.0"
bumpalo = { version = "3.9", features = ["boxed"] }
once_cell = "1.9.0"
notify = "4"
nom = "7"
anymap2 = "0.13"
convert_case = "0.5.0"
thiserror = "1.0.30"
fxhash = "0.2"
style = { path = "../style" }
rui = { path = "../rui" }
