[package]
name = "memoize_attr"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.0" }
quote = { version = "1.0", default-features = false }
syn-mid = { version = "0.5", features = ["clone-impls"] }
proc-macro2 = { version = "1.0" }

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true
