[package]
name = "memoize_attr"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.98"
quote = { version = "1.0.20", default-features = false }
syn-mid = { version = "0.5.3", features = ["clone-impls"] }
proc-macro2 = "1.0.40"

[dev-dependencies]
trybuild = "1.0.63"

[lib]
proc-macro = true
