[package]
name = "esplori"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = { git = "https://github.com/linebender/druid", rev = "bc1877b" }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
unicode-segmentation = "1.9.0"
xi-unicode = "0.3.0"
bumpalo = { version = "3.10.0", features = ["boxed"] }
once_cell = "1.12.0"
notify = "4.0.17"
nom = "7.1.1"
anymap2 = "0.13.0"
convert_case = "0.5.0"
thiserror = "1.0.31"
fxhash = "0.2.1"
style = { path = "../style" }
rui = { path = "../rui" }
memoize_attr = { path = "../memoize_attr" }
