[package]
name = "zest"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = { git = "https://github.com/linebender/druid", rev = "bc1877b" }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
reffers = "0.7.0"
decorum = "0.3.1"
core-graphics = "0.22"
style = { path = "../style" }
mixin = { path = "../../../third_party/mixin" }
delegate = "0.8"
debug-cell = "0.1"
cgmath = "0.18.0"
